@@ -1,3 +1,6 @@
+2019-10-15
+   merged duplicate code for dry-run and normal-run
+
 2019-09-19
    replaced System.out.println statements with log4j logging
 
